忽略对官方源皮肤的修复,改进皮肤问题